@@ -15,8 +15,12 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
+import javax.swing.text.html.Option;
 import java.util.*;
 
+/**
+ * Tests the methods of the UserManagerI interface.
+ */
 public class UserTest {
     static final String mail0 = "adfaefawe@apvfoafap098aadfaafhaweihuaf.asfihuawefiuh000";
     static final String mail1 = "adfaefawe@apvfoafap098aadfaafhaweihuaf.asfihuawefiui111";
@@ -244,16 +248,16 @@ public class UserTest {
         List<Object> entries = new ArrayList<>();
         entries.add(entryManager.addNewTask(user.getId(), user.getProfile(), "TASK0"));
         entries.add(entryManager.addNewTask(user.getId(), user.getProfile(), "TASK1"));
-        ZenServerMessage message = new ZenServerMessage(OperationType.ADD_NEW_ENTRY, entries, new VectorClock(user.getClock()));
+        ZenServerMessage message = new ZenServerMessage(OperationType.ADD_NEW_TASK, entries, new VectorClock(user.getClock()));
         userManager.addToQueue(user, message);
         userManager.addToQueue(user, message);
         List<ZenServerMessage> messages = userManager.getQueued(user.getId());
         Assert.assertEquals(2, messages.size());
-        Assert.assertEquals("Queue was not updated properly", message.type, messages.get(0).type);
-        Assert.assertEquals("Queue was not updated properly", message.clock.jsonify(), messages.get(0).clock.jsonify());
-        Assert.assertEquals("Queue was not updated properly", message.timeStamp.getEpochSecond(), messages.get(0).timeStamp.getEpochSecond());
-        Assert.assertEquals("Queue was not updated properly", ((Task) message.arguments.get(0)).getTask(), "TASK0");
-        Assert.assertEquals("Queue was not updated properly", ((Task) message.arguments.get(1)).getTask(), "TASK1");
+        Assert.assertEquals("Queue was not updated properly", message.type, messages.getFirst().type);
+        Assert.assertEquals("Queue was not updated properly", message.clock.jsonify(), messages.getFirst().clock.jsonify());
+        Assert.assertEquals("Queue was not updated properly", message.timeStamp.getEpochSecond(), messages.getFirst().timeStamp.getEpochSecond());
+        Assert.assertEquals("Queue was not updated properly", "TASK0", ((Task) message.arguments.get(0)).getTask());
+        Assert.assertEquals("Queue was not updated properly", "TASK1", ((Task) message.arguments.get(1)).getTask());
         database.close();
 
     }
@@ -267,7 +271,7 @@ public class UserTest {
         List<Object> entries = new ArrayList<>();
         entries.add(entryManager.addNewTask(user.getId(), user.getProfile(), "TASK0"));
         entries.add(entryManager.addNewTask(user.getId(), user.getProfile(), "TASK1"));
-        ZenServerMessage message = new ZenServerMessage(OperationType.ADD_NEW_ENTRY, entries, new VectorClock(user.getClock()));
+        ZenServerMessage message = new ZenServerMessage(OperationType.ADD_NEW_TASK, entries, new VectorClock(user.getClock()));
         userManager.addToQueue(user, message);
         userManager.clearQueue(user.getId());
         List<ZenServerMessage> messages = userManager.getQueued(user.getId());
@@ -282,8 +286,9 @@ public class UserTest {
         UserManagerI userManager = database.getUserManager();
         User user = userManager.addUser(1,mail1, null, 0);
         userManager.setToken(user.getId(),"TOKEN");
-        String token = userManager.getToken(user.getId());
-        Assert.assertEquals("Returned token was wrong.", "TOKEN", token);
+        Optional<String> token = userManager.getToken(user.getId());
+        Assert.assertTrue( "Token was not saved.", token.isPresent());
+        Assert.assertEquals("Returned token was wrong.", "TOKEN", token.get());
         database.close();
 
     }
